fixed overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 body{
   min-height: 100vh;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 body::-webkit-scrollbar {
   width: 0.5em;
